@@ -1,7 +1,6 @@
 plugins {
     java
     id("org.springframework.boot") version "3.4.4" apply false
-    id("io.spring.dependency-management") version "1.1.7" apply false
 }
 
 allprojects {
@@ -15,7 +14,6 @@ allprojects {
 
 subprojects {
     apply(plugin = "java")
-    apply(plugin = "io.spring.dependency-management")
 
     java {
         toolchain {
@@ -23,19 +21,13 @@ subprojects {
         }
     }
 
-    dependencyManagement {
-        imports {
-            mavenBom("org.springframework.boot:spring-boot-dependencies:3.4.4")
-        }
-    }
-
     dependencies {
-        compileOnly("org.projectlombok:lombok")
-        annotationProcessor("org.projectlombok:lombok")
+        "implementation"(platform("org.springframework.boot:spring-boot-dependencies:3.4.4"))
+        "compileOnly"("org.projectlombok:lombok")
+        "annotationProcessor"("org.projectlombok:lombok")
     }
 
     tasks.withType<JavaCompile> {
         options.encoding = "UTF-8"
-        options.compilerArgs.add("--enable-preview")
     }
 }
